# projeto_streamlit_step2

./: Cadastro.py  clientes.csv  pyproject.toml
pages/: Consulta.py
