[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["João Rafael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
